Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.2.0 Beta1
-
None
-
0d5ef23ee7cf326c080580f145123de7183dc142
Description
When trying to run an application which has multiple files, such as samegame.qml in the qt examples, an assert like the following appears:
ASSERT: "!url.isRelative() && (QQmlFile::urlToLocalFileOrQrc(url).isEmpty() || !QDir::isRelativePath(QQmlFile::urlToLocalFileOrQrc(url)))" in file qml/qqmltypeloader.cpp, line 1568
In other cases, I've also seem a failure complaining about 'import "."' not having a qmldir or namespace.
Attachments
Issue Links
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
For Gerrit Dashboard: QTBUG-34301 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
69034,2 | Fix qml runtime when loading files that imported other files | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |